2010-08-07
 - this is an incomplete commit, more or less a momentum of my codebase
 - the data backend does now have a DataProperty
 - the QListView was replaced by a QTreeView
 - currently some things are broken since code has to be adapted to that the new property system will be used
 - reassigned many things, see TODO
2010-08-04
 - fixed the Data* backend. now the program does not crash anymore if a Document is removed
   (this happens on program exit) but later this program might contain multiple documents at once
 - now the class Model should be able to remove:
  - either everything using delete DataRoot or
  - remove a single module or connection
2010-08-03
 - removed dump() framework from the backend
2010-08-02
 - fix Model.cpp::insertConnection|Modules to return the respective QModelIndex or an invalid QModelIndex if something went wrong
 - created an inteface to add connections via Document.cpp
2010-08-01
 - minor fixes
 - drawing of modput connections looks nicer now
 - Model.cpp::insertConnection fixed bug where a module output could be connected to the same module's input
 - adding a connection twice is not possible anymore as there is now a prevention check, see Model.cpp
 - Model.cpp::insertConnection is now complete! *yepee*
2010-07-25
 - connections are now drawn, they are properly added to the graph as well!
   see also screenshots/interface3.png
 - finally implemented Mode.cpp:insertConnection(..)
   - DataConnection.cpp/.h and DataPort.cpp/.h still need to be fixed (not done yet)
   - Connection.cpp/.h need to be fixed as well (not done yet)
2010-06-14
 - added some code to finally insert connections, all that is missing is:
  - implementation of Model::insertConnection(...)
  - formal checks for correctness of the to be inserted connection
  - fix Connection class, which does the drawing of the connection
  - probably changes in the backend: DataConnection

2010-05-03
 - added a new hierarchy layer to the Model: