@@ -18,20 +18,49 @@
 */
 
 #include "DataAbstractModule.h"
+#include "DataProperty.h"
 
 DataAbstractModule::DataAbstractModule ( int inputs, int modputs, int outputs ) {
-  // ports need to be created from insertModule(..) in Model.cpp, see also the insertPort(..) implementation
-  this->inputs=inputs;
-  this->modputs=modputs;
-  this->outputs=outputs;
+    // ports need to be created from insertModule(..) in Model.cpp, see also the insertPort(..) implementation
+    this->inputs=inputs;
+    this->modputs=modputs;
+    this->outputs=outputs;
 }
 
 DataAbstractModule::~DataAbstractModule() {
 //   qDebug() << __PRETTY_FUNCTION__;
-  // we have to take care about the Ports, just remove all of them!
-  foreach(DataAbstractItem* item, m_childItems) {
-    removeChild(m_childItems.indexOf(item));
-  }
+    // we have to take care about the Ports and properties, just remove all of them!
+    foreach(DataAbstractItem* item, m_childItems) {
+        removeChild(m_childItems.indexOf(item));
+    }
+}
+
+void DataAbstractModule::setProperty(QString key, QVariant value) {
+    //search if key is already there and modify it
+    for (int i = 0; i < childCount(); ++i) {
+        if (childItems()[i]->getObjectType() == DataItemType::DATAPROPERTY) {
+            DataProperty* p = static_cast<DataProperty*>( childItems()[i] );
+            if (p->key() == key) {
+                p->setValue(value);
+                return;
+            }
+        }
+    }
+    // key was not found, so we create it
+    DataProperty* p = new DataProperty(key, value);
+    p->setParent(this);
+    appendChild(p);
+}
+
+QVariant DataAbstractModule::property(QString key) {
+    for (int i = 0; i < childCount(); ++i) {
+        if (childItems()[i]->getObjectType() == DataItemType::DATAPROPERTY) {
+            DataProperty* p = static_cast<DataProperty*>( childItems()[i] );
+            if (p->key() == key)
+                return p->value();
+        }
+    }
+    return QVariant();
 }
 
 unsigned int DataAbstractModule::getObjectType() {
@@ -39,13 +68,13 @@ unsigned int DataAbstractModule::getObjectType() {
 }
 
 void DataAbstractModule::removeChild ( unsigned int index ) {
-  if ( m_childItems.size() < index ) {
-    qDebug() << __PRETTY_FUNCTION__ << "FATAL ERROR: child item not found";
-    exit( 1 );
-  }
-  DataAbstractItem* child = m_childItems[index];
-  m_childItems.removeAt( index );
-  delete child;
+    if ( m_childItems.size() < index ) {
+        qDebug() << __PRETTY_FUNCTION__ << "FATAL ERROR: child item not found";
+        exit( 1 );
+    }
+    DataAbstractItem* child = m_childItems[index];
+    m_childItems.removeAt( index );
+    delete child;
 }
 
 // will return how many ports are used per type
