@@ -42,8 +42,8 @@ protected:
     void removeReference ( unsigned int index );
     /*! WARNING: never delete objects as for instance childItems in the structure here
     ** since this will create inconsistencies between the model and this data structure.<br>
-    ** A better way is to fail with exit(0) and a meaningful error message meant for
-    ** developrs: since this problem must be handled with great care! */
+    ** if you want to delete items, use removeRows() in the Model.cpp and do add/remove items
+    ** with parent->appendChild(..) and parent->removeChild(..) as removing might be quite complex. */
     ~DataPort();
 private:
     QList<DataAbstractItem*> m_referencesChildItems;
