@@ -19,56 +19,12 @@
 M_REGISTER(NoiseGenPerlin);
 
 NoiseGenPerlin::NoiseGenPerlin() : DataAbstractModule(0,0,1) {
-  noise::module::Perlin myModule;
-//   addVisualRepresentation();
-// 1. [done] create primary graphical module
-// 2. create delegate exports for properties:
-//      - all module specific paramters
-//      - xpos/ypos
-//      - static: module ID, module name
-// 3. create in/out/mod ports
-
-// interface for generic property access
-//   register(double,GetFrequency(), SetFrequency());
-
-//   double   GetFrequency () const
-//      Returns the frequency of the first octave.
-//   void   SetFrequency (double frequency)
-//      Sets the frequency of the first octave.
-
-
-/*
-  double   GetLacunarity () const
-     Returns the lacunarity of the Perlin noise.
-  noise::NoiseQuality   GetNoiseQuality () const
-     Returns the quality of the Perlin noise.
-  int   GetOctaveCount () const
-     Returns the number of octaves that generate the Perlin noise.
-  double   GetPersistence () const
-     Returns the persistence value of the Perlin noise.
-  int   GetSeed () const
-     Returns the seed value used by the Perlin-noise function.
-  virtual int   GetSourceModuleCount () const
-     Returns the number of source modules required by this noise module.
-  virtual double   GetValue (double x, double y, double z) const
-     Generates an output value given the coordinates of the specified input value.
-
-
-  void   SetLacunarity (double lacunarity)
-     Sets the lacunarity of the Perlin noise.
-
-  void   SetNoiseQuality (noise::NoiseQuality noiseQuality)
-     Sets the quality of the Perlin noise.
-
-  void   SetOctaveCount (int octaveCount)
-     Sets the number of octaves that generate the Perlin noise.
-
-  void   SetPersistence (double persistence)
-     Sets the persistence value of the Perlin noise.
-
-  void   SetSeed (int seed)
-     Sets the seed value used by the Perlin-noise function.
-*/
+  setProperty("frequency", 0.234f);
+  setProperty("lacunarity", 0.2f);
+  setProperty("Octave count", 8);
+  setProperty("Persistence",22);
+  setProperty("Seed",3);
+  setProperty("Noise quality",3);
 }
 
 NoiseGenPerlin::~NoiseGenPerlin() {
