@@ -1,3 +1,6 @@
+2010-08-07 II
+ - module->property() and module->setProperty() work! *yepee*
+ - fix crash when clicking QTreeView item which does not have a QGraphicsItem associated
 2010-08-07
  - this is an incomplete commit, more or less a momentum of my codebase
  - the data backend does now have a DataProperty
